--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-sweetalert2": "^0.6.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
+    "sweetalert2": "^11.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
